# bachelors-thesis

./: .gitignore  README.md  bachelors.bib  main.tex  pyproject.toml  ruff.toml
experiments/: chain.ipynb  golden_chain_convergence.csv  hamiltonian.ipynb  su2.ipynb  svd.ipynb  trees.ipynb
src/symmnet/: __init__.py  bench.py  cgtensor.py  core.py  fusiontree.py  fusiontree_rewrite.py  symmetry.py
src/symmnet/models/: mps.py
symmnet/: pyproject.toml
symmnet/experiments/: hamiltonian.ipynb  su2.ipynb  svd.ipynb
symmnet/src/symmnet/: cgtensor.py  core.py  fusiontree.py  su2.py  symmetry.py  util.py
symmnet/src/symmnet/models/: mps.py
test/: test_fustiontree.py  test_symmetries.py
tex/: Makefile  bachelors.bib  fusiontree.tex  main.tex  make_standalone.py  preamble.tex  symmetry_standalone.tex  ucsd.bst
tex/chapters/: anyons.tex  background.tex  categories.tex  extra.tex  fermions.tex  implementations.tex  intro.tex  intro_old.tex  symmetry.tex
tex/frontmatter/: abstract.tex
tex/test/: braid.py  fusiontree.tex
