[project]
name = "symmnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jkr11", email = "113939131+jkr11@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
